src/snapshots/ampterm__app__Test 1f.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                        ┌URL───────────────────────────────────────────────────────────────────────────┐                                        "
"                                        │https://music.local                                                           │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Username──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │admin                                                                         │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        ┌Password──────────────────────────────────────────────────────────────────────┐                                        "
"                                        │********                                                                      │                                        "
"                                        └──────────────────────────────────────────────────────────────────────────────┘                                        "
"                                        Use legacy auth instead                                                      [X]                                        "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                          Enter: Submit                                                                         "
"                                                                     Space: Toggle checkbox                                                                     "
"                                                                   Tab or arrow keys: Navigate                                                                  "
"                                                                          Logging in...                                                                         "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
