src/snapshots/ampterm__app__Test 2-005.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"Ampterm 0.1.0 | Tasks: 0                                                                                                                                        "
"┌Playlist──────────────────────────────┐┌Playlist Queue────────────────────────────────────────────────────────────────┐┌Queue (0)─────────────────────────────┐"
"│>All Music                      46    ││                                                                              ││                                      │"
"│ All Music (Smart)              46    ││                                                                              ││                                      │"
"│ Music Containing Letter A      30    ││                                                                              ││                                      │"
"│ Music Containing Letter E      31    ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                              Choose a playlist!                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘└Remaining: 0 (00:00)──────────────────┘"
"┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌SPD┐┌VOL┐┌──────────────────────────────────────┐"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                               Select a music!                                              ││   ││   ││          Continue tapping...         │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└1.1┘└050┘└──────────────────────────────────────┘"
"[NORMAL] Welcome to Ampterm. Press <?> at any point to see all of its keybindings.                                                                              "
